Regression: Normal Edit modifier screws up UVs #110471

Closed
opened 2023-07-25 19:31:29 +02:00 by Moby-Deee · 6 comments

Broken: 3.6.1
Worked: 3.5
Caused by 7eee378ecc

Shot Description
toggling visibility of normal edit modifier broke the UV

Steps to Reproduce

  • Start a new project
  • Add image texture on the Cube mateiral
  • Turn on auto-smooth normals from the mesh data tab
  • Add the Normal Edit modifier to the mesh.

Some of my meshes broke permanently and toggling on or even removing the modifier doesn't fix the UVs.

NormalEditUVsBug3.6.1.blend

Broken: 3.6.1 Worked: 3.5 Caused by 7eee378eccc8f87e1330b9cfea2799928be9d657 **Shot Description** toggling visibility of normal edit modifier broke the UV **Steps to Reproduce** - Start a new project - Add image texture on the Cube mateiral - Turn on auto-smooth normals from the mesh data tab - Add the Normal Edit modifier to the mesh. Some of my meshes broke permanently and toggling on or even removing the modifier doesn't fix the UVs. [NormalEditUVsBug3.6.1.blend](https://projects.blender.org/attachments/596d63cc-4dbb-43b1-b341-cf735333e1fb)
Moby-Deee added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-25 19:31:30 +02:00

Hi, can you share .blend file with us?

Hi, can you share .blend file with us?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-07-26 05:27:28 +02:00

Broken: 3.6.1, 4.0.0a 2023-07-25 aebc743bf1c7
Worked: 3.5.1

Attached is a .blend for reproducing with a default cube set to a color grid texture.

When the NormalEdit modifier is enabled and then disabled, the UVs mess up. Though enabling and disabling the modifier a second time appears to restore the UVs back to their original state.

The issue appears to be related to the automatic flipping of polygons when their normals do not match their resultant split normals because the issue no longer occurs when Lock Polygon Normals (the lock icon to the right of Mix>Max Angle) is enabled. Toggling Lock Polygon Normals on and off has the same effect as enabling and disabling the modifier.

The issue can also be observed with the Radial mode of the modifier if the Target Object is moved outside of the default cube or if the cube's polygons are flipped to face inwards.

While the modifier is enabled, moving the Target Object around will repeatedly mess up the UVs, restore them, mess them up again etc.

Broken: 3.6.1, 4.0.0a 2023-07-25 `aebc743bf1c7` Worked: 3.5.1 Attached is a .blend for reproducing with a default cube set to a color grid texture. When the NormalEdit modifier is enabled and then disabled, the UVs mess up. Though enabling and disabling the modifier a second time appears to restore the UVs back to their original state. The issue appears to be related to the automatic flipping of polygons when their normals do not match their resultant split normals because the issue no longer occurs when Lock Polygon Normals (the lock icon to the right of Mix>Max Angle) is enabled. Toggling Lock Polygon Normals on and off has the same effect as enabling and disabling the modifier. The issue can also be observed with the Radial mode of the modifier if the Target Object is moved outside of the default cube or if the cube's polygons are flipped to face inwards. While the modifier is enabled, moving the Target Object around will repeatedly mess up the UVs, restore them, mess them up again etc.
Pratik Borhade changed title from Normal Edit modifier screws up UVs to Regression: Normal Edit modifier screws up UVs 2023-07-28 08:18:35 +02:00

Thanks, can confirm the regression :)

Thanks, can confirm the regression :)

Broke between d48939f103c0 - bd86e719ab91

Broke between `d48939f103c0 - bd86e719ab91`
Caused by 7eee378eccc8f87e1330b9cfea2799928be9d657 @JacquesLucke ^
Pratik Borhade added this to the 3.6 LTS milestone 2023-07-28 12:34:18 +02:00
Jacques Lucke self-assigned this 2023-08-01 12:15:31 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-01 14:27:25 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-08-01 14:32:42 +02:00

Added the fix in 3.6LTS backporting list.

Added the fix in 3.6LTS backporting list.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110471
There is no content yet.