source/blender/blenkernel/intern/customdata.cc
@@ -3505,7 +3505,7 @@ void CustomData_swap_corners(CustomData *data, const int index, const int *corne
   }
 }
 
-void CustomData_swap(CustomData *data, const int index_a, const int index_b)
+void CustomData_swap(CustomData *data, const int index_a, const int index_b, const int totelem)
 {
   char buff_static[256];
 
@@ -3514,17 +3514,17 @@ void CustomData_swap(CustomData *data, const int index_a, const int index_b)
   }
 
   for (int i = 0; i < data->totlayer; i++) {
-    const LayerTypeInfo *typeInfo = layerType_getInfo(eCustomDataType(data->layers[i].type));
+    CustomDataLayer &layer = data->layers[i];
+    ensure_layer_data_is_mutable(layer, totelem);
+    const LayerTypeInfo *typeInfo = layerType_getInfo(eCustomDataType(layer.type));
     const size_t size = typeInfo->size;
     const size_t offset_a = size * index_a;
     const size_t offset_b = size * index_b;
 
     void *buff = size <= sizeof(buff_static) ? buff_static : MEM_mallocN(size, __func__);
-    memcpy(buff, POINTER_OFFSET(data->layers[i].data, offset_a), size);
-    memcpy(POINTER_OFFSET(data->layers[i].data, offset_a),
-           POINTER_OFFSET(data->layers[i].data, offset_b),
-           size);
-    memcpy(POINTER_OFFSET(data->layers[i].data, offset_b), buff, size);
+    memcpy(buff, POINTER_OFFSET(layer.data, offset_a), size);
+    memcpy(POINTER_OFFSET(layer.data, offset_a), POINTER_OFFSET(layer.data, offset_b), size);
+    memcpy(POINTER_OFFSET(layer.data, offset_b), buff, size);
 
     if (buff != buff_static) {
       MEM_freeN(buff);
